--- a/myappmobile/ios/myappmobile/Info.plist
+++ b/myappmobile/ios/myappmobile/Info.plist
@@ -47,5 +47,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Roboto-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
