--- a/myappmobile/package.json
+++ b/myappmobile/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.22.0",
+    "@react-native-async-storage/async-storage": "^1.22.2",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-navigation/bottom-tabs": "^6.5.12",
@@ -26,7 +26,9 @@
     "react-native": "0.73.4",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-image-picker": "^7.1.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-prompt-android": "^1.1.0",
     "react-native-reanimated": "^3.7.1",
     "react-native-safe-area-context": "^4.9.0"
   },
