--- a/myappmobile/package.json
+++ b/myappmobile/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.18.0",
     "@react-native-async-storage/async-storage": "^1.22.2",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "^7.6.2",
@@ -18,19 +20,25 @@
     "@react-navigation/stack": "^6.3.21",
     "axios": "^1.6.7",
     "base-64": "^1.0.0",
+    "crypto-js": "^4.2.0",
     "expo": "~50.0.7",
+    "expo-image-manipulator": "~11.8.0",
+    "expo-image-picker": "^14.7.1",
     "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-datepicker": "^6.1.0",
     "react-native": "0.73.4",
     "react-native-datepicker": "^1.7.2",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-image-picker": "^7.1.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-prompt-android": "^1.1.0",
     "react-native-reanimated": "^3.7.1",
-    "react-native-safe-area-context": "^4.9.0"
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-vector-icons": "^10.0.3",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
